--- a/data_extraction_genAI_final.ipynb
+++ b/data_extraction_genAI_final.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "SiIc1RvYk9_W"
       },
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -137,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -200,6 +200,82 @@
       "source": [
         "! streamlit run app.py & npx localtunnel --port 8501 & curl https://loca.lt/mytunnelpassword"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import unittest\n",
+        "import os\n",
+        "import tempfile\n",
+        "from unittest.mock import patch, mock_open\n",
+        "from pdf2image import convert_from_path\n",
+        "from io import BytesIO\n",
+        "from langchain_community.document_loaders import PyPDFLoader\n",
+        "\n",
+        "class TestImageFormat(unittest.TestCase):\n",
+        "    def test_image_format_valid_path(self):\n",
+        "        with tempfile.NamedTemporaryFile(suffix=\".png\") as tmp:\n",
+        "            image_parts = image_format(tmp.name)\n",
+        "            self.assertIsInstance(image_parts, list)\n",
+        "            self.assertEqual(len(image_parts), 1)\n",
+        "            self.assertEqual(image_parts[0][\"mime_type\"], \"image/png\")\n",
+        "            self.assertIsInstance(image_parts[0][\"data\"], bytes)\n",
+        "\n",
+        "    def test_image_format_invalid_path(self):\n",
+        "        with self.assertRaises(FileNotFoundError):\n",
+        "            image_format(\"invalid_path.png\")\n",
+        "\n",
+        "class TestGeminiOutput(unittest.TestCase):\n",
+        "    @patch(\"google.generativeai.GenerativeModel.generate_content\")\n",
+        "    def test_gemini_output(self, mock_generate_content):\n",
+        "        mock_response = mock_generate_content.return_value\n",
+        "        mock_response.text = \"Sample output\"\n",
+        "        image_path = \"test_image.png\"\n",
+        "        system_prompt = \"Test system prompt\"\n",
+        "        user_prompt = \"Test user prompt\"\n",
+        "\n",
+        "        output = gemini_output(image_path, system_prompt, user_prompt)\n",
+        "        self.assertEqual(output, \"Sample output\")\n",
+        "        mock_generate_content.assert_called_once()\n",
+        "\n",
+        "class TestStandardizeKeys(unittest.TestCase):\n",
+        "    def test_standardize_keys(self):\n",
+        "        data = '{\"Invoice No\": \"123\", \"name\": \"John Doe\", \"TOTAL\": \"100.00\"}'\n",
+        "        attributes = [\"Invoice No\", \"Name\", \"Total\"]\n",
+        "        expected_output = '{\"INVOICE_NO\": \"123\", \"NAME\": \"John Doe\", \"TOTAL\": \"100.00\"}'\n",
+        "        self.assertEqual(standardize_keys(data, attributes), expected_output)\n",
+        "\n",
+        "class TestCheckboxContainer(unittest.TestCase):\n",
+        "    @patch(\"streamlit.text_input\")\n",
+        "    @patch(\"streamlit.columns\")\n",
+        "    @patch(\"streamlit.button\")\n",
+        "    @patch(\"streamlit.checkbox\")\n",
+        "    def test_checkbox_container(self, mock_checkbox, mock_button, mock_columns, mock_text_input):\n",
+        "        mock_text_input.return_value = \"New Attribute\"\n",
+        "        mock_columns.side_effect = [[mock.Mock(), mock.Mock()], [mock.Mock(), mock.Mock(), mock.Mock()]]\n",
+        "        mock_button.side_effect = [True, False, False]\n",
+        "        dummy_data = [\"Invoice No\", \"Name\", \"Total\"]\n",
+        "\n",
+        "        checkbox_container(dummy_data)\n",
+        "\n",
+        "        mock_text_input.assert_called_once()\n",
+        "        self.assertEqual(mock_columns.call_count, 2)\n",
+        "        self.assertEqual(mock_button.call_count, 3)\n",
+        "        self.assertEqual(mock_checkbox.call_count, len(dummy_data))\n",
+        "        self.assertEqual(st.session_state[\"dummy_data\"], [\"Invoice No\", \"Name\", \"Total\", \"New Attribute\"])\n",
+        "\n",
+        "class TestConvertListToString(unittest.TestCase):\n",
+        "    def test_convert_list_to_string(self):\n",
+        "        test_list = [\"Item 1\", \"Item 2\", \"Item 3\"]\n",
+        "        expected_output = \"Item 1, Item 2, Item 3\"\n",
+        "        self.assertEqual(convert_list_to_string(test_list), expected_output)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "kV7XWPgj4OxU"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
